<resources>
    <string name="app_name">Tema 4</string>
    <string name="btnNumerosPrimos">Primos</string>
    <string name="btnJuegoAciertos">Aciertos</string>
    <string name="btnDesplazandoImg">Desplazando</string>
    <string name="btnSeleccionandoImg">Seleccionando</string>
    <string name="title_activity_numeros_primos">Números Primos</string>
    <string name="lblIntroduceN">Introduce un número:</string>
    <string name="btnCalcular">Calcular</string>
    <string name="title_activity_juego_de_aciertos">Juego de Aciertos</string>
    <string name="title_activity_desplazando_imagenes">Desplazando Imágenes</string>
    <string name="title_activity_seleccionando_imagenes">Seleccionando Imágenes</string>
    <string name="btnRosa">Rosa</string>
    <string name="btnMargarita">Margarita</string>
    <string name="btnTulipan">Tulipan</string>
    <string name="btnVioleta">Violeta</string>

    <string name="pais1">España</string>
    <string name="pais2">Francia</string>
    <string name="pais3">Japón</string>
    <string name="pais4">Italia</string>
    <string name="pais5">Portugal</string>
    <string name="pais6">Grecia</string>
    <string name="pais7">Alemania</string>
    <string name="pais8">Holanda</string>
    <string name="pais9">Irlanda</string>
    <string name="pais10">Rusia</string>

    <string name="ciudad1">Tokio</string>
    <string name="ciudad2">Berlín</string>
    <string name="ciudad3">Roma</string>
    <string name="ciudad4">París</string>
    <string name="ciudad5">Ámsterdam</string>
    <string name="ciudad6">Madrid</string>
    <string name="ciudad7">Moscú</string>
    <string name="ciudad8">Dublín</string>
    <string name="ciudad9">Atenas</string>
    <string name="ciudad10">Lisboa</string>

    <string name="hintPais">País seleccionado</string>
    <string name="hintCiudad">Ciudad seleccionada</string>
    <string name="btnVerificar">Verificar</string>

    <string name="strSiEsPrimo">Es un número primo</string>
    <string name="strNoEsPrimo">No es un número primo</string>
    <string name="error">Introduce un valor</string>


</resources>
