<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LayoutPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/LayoutImagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/idImagenAndroid"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:src="@drawable/androidmascot" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/LayoutBotones"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:padding="5dp">

        <TableRow
            android:id="@+id/FilaBotones1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnNumerosPrimos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/ic_menu_edit"
                android:text="@string/btnNumerosPrimos"
                android:textSize="12sp"
                tools:layout_width="wrap_content" />

            <Button
                android:id="@+id/btnJuegoAciertos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/btn_star"
                android:text="@string/btnJuegoAciertos"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:id="@+id/FilaBotones2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnDesplazandoImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/ic_menu_report_image"
                android:text="Button"
                android:textSize="12sp"
                tools:text="@string/btnDesplazandoImg" />

            <Button
                android:id="@+id/btnSeleccionandoImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="?android:attr/actionModeCopyDrawable"
                android:text="@string/btnSeleccionandoImg"
                android:textSize="12sp" />
        </TableRow>

    </TableLayout>
</LinearLayout>