<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LayoutFragmentFlores"
    android:layout_width="match_parent"
    android:layout_height="510dp"

    android:orientation="vertical"
    tools:context=".SeleccionandoImagenesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <fragment
            android:id="@+id/idRosa"
            android:name="fragmentRosa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <fragment
            android:id="@+id/idMargarita"
            android:name="fragmentMargarita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <fragment
            android:id="@+id/idTulipan"
            android:name="fragmentTulipan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <fragment
            android:id="@+id/idVioleta"
            android:name="fragmentVioleta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TableLayout
            android:id="@+id/LayoutBotonesFlores"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="320dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="70dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnRosa"
                    style="@style/EstiloBotonesFlores"
                    android:text="@string/btnRosa" />

                <Button
                    android:id="@+id/btnMargarita"
                    style="@style/EstiloBotonesFlores"
                    android:text="@string/btnMargarita" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnTulipan"
                    style="@style/EstiloBotonesFlores"
                    android:text="@string/btnTulipan" />

                <Button
                    android:id="@+id/btnVioleta"
                    style="@style/EstiloBotonesFlores"
                    android:text="@string/btnVioleta" />
            </TableRow>

        </TableLayout>
    </LinearLayout>


</LinearLayout>